--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "si579-final-project",
+  "homepage": "https://mrthorpe12.github.io/si579-final-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
